# pico_c_dev

./: CMakeLists.txt  example_auto_set_url.cmake  readme.md
.cache/clangd/index/: blink.c.90B0A1EDEE5131B9.idx  button.c.4172F92B88298C31.idx  microdisp.c.1C91A7B7615951B4.idx
bcd_count/: CMakeLists.txt  bcd_count.c
beep/: CMakeLists.txt  beep.c
binary_count/: CMakeLists.txt  binary_count.c
blink/: CMakeLists.txt  blink.c
button/: CMakeLists.txt  button.c
i2c_display/: CMakeLists.txt  display.c  main.c
interrupted/: CMakeLists.txt  main.c
microdisp/: CMakeLists.txt  displib.c  microdisp.c
motion_sense/: CMakeLists.txt  motion_sense.c
temperature_sense/: CMakeLists.txt  temp_sense.c
thermometer/: CMakeLists.txt  bcdlib.c  thermometer.c
